docs(todo): record self-contained-jar idea (configs + demo DB + launchers)
Capture the "zero-download first run" idea as three independently shippable
phases with investigation hints only (not an implementation commitment):
in-jar example configs + classpath resolution + parse guard; a build-time
~1000-address demo LMDB with runtime auto-fallback + loud WARN; and
jar-plus-JDK launchers (baf.* / JBang). Notes the verified code seams
(Main.loadConfiguration, ConsumerJava.initLMDB, AddressFilesToLMDB,
exec-maven-plugin wiring, REUSE) so a future pass can start from facts.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RgbVeHAnMUnyQ2PhWonpTq